; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/solaris/remote/extr_301.c_work_around_zlib_bug.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/solaris/remote/extr_301.c_work_around_zlib_bug.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [14 x i8] c"Entry /%s/%s/\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @work_around_zlib_bug(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  %4 = alloca [4096 x i8], align 16
  %5 = alloca [64 x i8], align 16
  store i32 %0, i32* %3, align 4
  %6 = getelementptr inbounds [64 x i8], [64 x i8]* %5, i64 0, i64 0
  %7 = call i32 @memset(i8* %6, i32 0, i32 64)
  %8 = getelementptr inbounds [64 x i8], [64 x i8]* %5, i64 0, i64 0
  %9 = call i32 @memset(i8* %8, i32 66, i32 32)
  %10 = getelementptr inbounds [4096 x i8], [4096 x i8]* %4, i64 0, i64 0
  %11 = call i32 @memset(i8* %10, i32 0, i32 4096)
  %12 = getelementptr inbounds [4096 x i8], [4096 x i8]* %4, i64 0, i64 0
  %13 = call i32 @memset(i8* %12, i32 66, i32 4000)
  %14 = getelementptr inbounds [4096 x i8], [4096 x i8]* %4, i64 0, i64 0
  %15 = getelementptr inbounds [64 x i8], [64 x i8]* %5, i64 0, i64 0
  %16 = getelementptr inbounds [64 x i8], [64 x i8]* %5, i64 0, i64 0
  %17 = call i32 @sprintf(i8* %14, i8* getelementptr inbounds ([14 x i8], [14 x i8]* @.str, i64 0, i64 0), i8* %15, i8* %16)
  %18 = getelementptr inbounds [4096 x i8], [4096 x i8]* %4, i64 0, i64 2999
  store i8 10, i8* %18, align 1
  %19 = getelementptr inbounds [4096 x i8], [4096 x i8]* %4, i64 0, i64 0
  %20 = load i32, i32* %3, align 4
  %21 = call i32 @zwrite(i8* %19, i32 3000, i32 %20)
  %22 = load i32, i32* %3, align 4
  %23 = call i32 @zflush(i32 %22)
  %24 = load i32, i32* %2, align 4
  ret i32 %24
}

declare dso_local i32 @memset(i8*, i32, i32) #1

declare dso_local i32 @sprintf(i8*, i8*, i8*, i8*) #1

declare dso_local i32 @zwrite(i8*, i32, i32) #1

declare dso_local i32 @zflush(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
